[package]
name = "goatns"
version = "0.5.0"
categories = ["network-programming"]
edition = "2021"
include = [
  "src/**/*",
  "LICENSE.md",
  "README.md",
  "!**/*_test.*",
  "!**/tests/**/*",
]
keywords = ["dns", "server", "tokio", "api", "oauth2", "oidc"]
license = "MIT"
repository = "https://github.com/yaleman/goatns.git"
rust-version = "1.80"
description = "Yet another authoritative DNS name server. But with goat references."

[features]
default = []

[workspace]
members = [".", "goat-lib", "goatns-macros"]

[lib]
bench = false

[profile.release]
lto = "fat"
opt-level = 3

[dependencies]
argon2 = "0.5"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.86"
axum = { workspace = true, features = ["http2", "original-uri", "macros"] }
axum-csp = { git = "https://github.com/yaleman/axum-csp/", rev = "cb55f3d" }
axum-extra = { version = "0.10.0" }
axum-server = { version = "^0.7.1", features = ["tls-rustls"] }
axum-tracing-opentelemetry = { version = "0.25.0" }
base64 = "0.22.1"
bit-vec = "0.8.0"
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["clock"] }
clap = { version = "4.5.28", features = ["cargo", "env"] }
concread = "0.5.3"
config = { version = "0.15", features = ["json"] }
dialoguer = "0.11.0"
enum-iterator = "2.1.0"
flexi_logger = { version = "0.29", features = ["async", "default"] }
futures = "0.3.30"
futures-util = "0.3.30"
gethostname = "1.0.0"
goat-lib = { path = "goat-lib" }
goatns-macros = { path = "./goatns-macros" }
hex = "0.4.3"
init-tracing-opentelemetry = { version = "0.25.1", features = [
  "tracing_subscriber_ext",
] }
ipnet = { version = "2.11.0", features = ["json", "serde"] }
json5 = "0.4.1"
log = "0.4.25"
num-traits = "0.2.19"
oauth2 = "5.0.0"
openidconnect = "4.0.0"
opentelemetry = "0.27.1"
opentelemetry-otlp = { version = "0.27.0", features = ["http-proto"] }
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
packed_struct = { version = "0.10.1", features = ["byte_types_256"] }
rand = "0.9.0"
rand_core = { version = "0.9", features = ["std"] }
regex = { workspace = true }
reqwest = { version = "0.12.12", features = [
  "blocking",
  "cookies",
  "json",
  "rustls-tls",
], default-features = false }
rmp-serde = "1.3.0"
rustls = { version = "0.23.22" }
sea-orm = { version = "1.0.0", features = [
  "runtime-tokio-rustls", # this is why we have multiple rustls
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid",
  "debug-print",
  "mock",
] }
sea-orm-migration = { version = "1.0.0", features = [
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid",
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
serde_derive = "1.0.145"
serde_json = "1.0.138"
sha2 = { version = "0.10.8", features = ["asm", "asm-aarch64"] }
shellexpand = "3.1.0"
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "json",
  "time",
  "uuid",
], default-features = false }
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.43.1", features = ["full", "tracing"] }
tokio-cron-scheduler = "0.13.0"
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tower = "^0.5.2"
tower-http = { version = "^0.6.2", features = [
  "fs",
  "trace",
  "add-extension",
  "compression-gzip",
] }
tower-sessions = { version = "^0.9.1", features = [
  "sqlite-store",
  "deletion-task",
  "axum-core",
] }
tracing = "^0.1.40"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.18"
url = { version = "2.5.4", features = ["serde"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

[workspace.dependencies]
axum = "^0.7.9"
proc-macro2 = "1.0.93"
regex = "1.11.1"
syn = "2.0.98"

[dev-dependencies]
console-subscriber = "0.4.1"
criterion = "^0.5"
pcap = { version = "2.2.0", features = ["tokio"] }
scopeguard = "1.2.0"
tracing-subscriber = "0.3.19"
trust-dns-resolver = { version = "0.23.2", features = [
  "tokio",
  "tokio-runtime",
] }

[[bench]]
name = "baselines"
harness = false

[[bench]]
name = "datastore"
harness = false

[[bench]]
name = "parsers"
harness = false

[build-dependencies]
syn = { workspace = true }
