[package]
name = "goatns"
version = "0.6.1"
categories = ["network-programming"]
edition = "2024"
include = [
  "src/**/*",
  "LICENSE.md",
  "README.md",
  "!**/*_test.*",
  "!**/tests/**/*",
]
keywords = ["dns", "server", "tokio", "api", "oauth2", "oidc"]
license = "MIT"
repository = "https://github.com/yaleman/goatns.git"
rust-version = "1.87"
description = "Yet another authoritative DNS name server. But with goat references."

[features]
default = []

[workspace]
members = [".", "goat-lib", "goatns-macros"]

[lib]
bench = false

[profile.release]
lto = "fat"
opt-level = 3

[dependencies]
argon2 = "0.5"
askama = { version = "0.14.0" }
askama_web = { version = "0.14.7", features = ["axum-0.8"] }
async-trait = "0.1.89"
axum = { workspace = true, features = ["http2", "original-uri", "macros"] }
axum-csp = "0.0.10"
# axum-csp = { git = "https://github.com/yaleman/axum-csp/", rev = "cb55f3d" }
axum-extra = { version = "0.10.3" }
axum-server = { version = "^0.8.0", features = ["tls-rustls"] }
axum-tracing-opentelemetry = { version = "0.29.0" }
base64 = "0.22.1"
bit-vec = "0.8.0"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.54", features = ["cargo", "env"] }
concread = "0.5.8"
config = { version = "0.15", features = ["json"] }
dialoguer = "0.12.0"
enum-iterator = "2.3.0"
flexi_logger = { version = "0.31", features = ["async", "default"] }
futures = "0.3.31"
futures-util = "0.3.31"
gethostname = "1.1.0"
goat-lib = { path = "goat-lib" }
goatns-macros = { path = "./goatns-macros" }
hex = "0.4.3"
init-tracing-opentelemetry = { version = "0.30.1", features = [
  "tracing_subscriber_ext",
] }
ipnet = { version = "2.11.0", features = ["json", "serde"] }
json5 = "1.3.0"
log = "0.4.29"
num-traits = "0.2.19"
oauth2 = "5.0.0"
openidconnect = "4.0.1"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["http-proto"] }
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
packed_struct = { version = "0.10.1", features = ["byte_types_256"] }
rand = "0.9.2"
rand_core = { version = "0.9.5", features = ["std"] }
regex = { workspace = true }
reqwest = { version = "0.12.28", features = [
  "blocking",
  "cookies",
  "json",
  "rustls-tls",
], default-features = false }
rustls = { version = "0.23.36" }
sea-orm = { version = "1.1.19", features = [
  "runtime-tokio-rustls", # this is why we have multiple rustls
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid",
  "debug-print",
  "mock",
] }
sea-orm-migration = { version = "1.1.19", features = [
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "with-uuid",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_derive = "1.0.228"
serde_json = "1.0.149"
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64"] }
shellexpand = "3.1.1"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "json",
  "time",
  "uuid",
], default-features = false }
thiserror = "2.0.17"
time = "0.3.45"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-cron-scheduler = "0.15.1"
tokio-stream = { version = "0.1.18", features = ["net"] }
tokio-util = { version = "0.7.18", features = ["full"] }
tower = "^0.5.3"
tower-http = { version = "^0.6.8", features = [
  "fs",
  "trace",
  "add-extension",
  "compression-gzip",
] }
tower-sessions = { version = "^0.14.0", features = ["axum-core"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = { version = "^0.1.44", features = ["release_max_level_debug"] }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.22"
url = { version = "2.5.8", features = ["serde"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[workspace.dependencies]
axum = "^0.8.8"
proc-macro2 = "1.0.105"
regex = "1.12.2"
syn = "2.0.114"

[dev-dependencies]
console-subscriber = "0.5.0"
criterion = "0.8.1"
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
pcap = { version = "2.4.0", features = ["tokio"] }
scopeguard = "1.2.0"
tracing-subscriber = "0.3.22"

[[bench]]
name = "baselines"
harness = false

[[bench]]
name = "datastore"
harness = false

[[bench]]
name = "parsers"
harness = false

[build-dependencies]
syn = { workspace = true }
