[package]
name = "axum-csp-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum-csp = { path = "../axum-csp" }
axum = { version = "^0.7.0", default-features = false, features = [
    "original-uri",
    "tokio",
    "http1",
] }
regex = "1.10.2"
tokio = { version = "1.34.0", default-features = false, features = ["sync"] }

[dev-dependencies]
axum-server = "0.5.1"
lazy_static = "1.4.0"
tokio = { version = "1.34.0", default-features = false, features = ["full"] }
