[package]
name = "goat-lib"
version = { workspace = true }
edition = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = { workspace = true }
