[package]
name = "goatns-macros"
version = "0.0.1"
edition = "2021"
description = "Macros for the GoatNS Project"
license = "MIT"
repository = "https://github.com/yaleman/goatns.git"
keywords = ["macros"]
categories = ["network-programming"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]

proc-macro2 = { workspace = true }

