[package]
name = "goatns-macros"
version = "0.0.1"
categories = ["network-programming"]
edition = "2021"
keywords = ["macros"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yaleman/goatns.git"
description = "Macros for the GoatNS Project"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
