[package]
name = "goatns-macros"
version = "0.0.2"
categories = { workspace = true }
edition = { workspace = true }
keywords = ["macros"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
description = "Macros for the GoatNS Project"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
